--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "Copy each file, in a list of files, from one bucket to another.",
   "main": "handler.js",
   "dependencies": {
-    "aws-sdk": "^2.175.0"
+    "aws-sdk": "^2.175.0",
+    "url-parse": "^1.2.0"
   },
   "devDependencies": {
+    "chai": "^4.1.2",
     "mocha": "^4.0.1"
   },
   "scripts": {
