--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,28 +2,46 @@
 # Check https://circleci.com/docs/2.0/language-javascript/ for more details
 version: 2
 jobs:
-  build:
+  test:
     docker:
-      # specify the version you desire here
       - image: circleci/node:6.10
     working_directory: ~/repo
-
     steps:
       - checkout
-
-      # Download and cache dependencies
       - restore_cache:
           keys:
           - v1-dependencies-{{ checksum "package.json" }}
-          # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
-
       - run: yarn install
-
       - save_cache:
           paths:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
-        
-      # run tests!
       - run: yarn test
+
+  deploy:
+    docker:
+      - image: circleci/node:6.10
+    working_directory: ~/repo
+    steps:
+      - checkout
+      - run:
+          name: install serverless
+          command: sudo npm install -g serverless
+      - run:
+          name: deploy
+          command: serverless deploy
+      - run:
+          name: verify
+          command: serverless invoke --function hello
+workflows:
+  version: 2
+  test-deploy:
+    jobs:
+      - test
+      - deploy:
+          requires:
+            - test
+          filters:
+            branches:
+              only: master
