--- a/serverless.yml
+++ b/serverless.yml
@@ -16,3 +16,9 @@ package:
 functions:
   hello:
     handler: handler.hello
+  copy:
+    handler: handler.cp
+    events:
+      - sns:
+        topicName: copy
+        displayName: Copy one src file to the dst
