add an invoke after deploy for the copy command

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,6 +31,9 @@ jobs:
       - run:
           name: deploy
           command: serverless deploy --stage production
+      - run:
+          name: verify
+          command: serverless invoke --stage production --function copy
 workflows:
   version: 2
   test-deploy:
