--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,7 +33,7 @@ jobs:
           command: serverless deploy --stage production
       - run:
           name: verify
-          command: serverless invoke --stage production --function bulk_copy
+          command: SLS_DEBUG=* serverless invoke --stage production --function bulk_copy
 workflows:
   version: 2
   test-deploy:
