--- a/serverless.yml
+++ b/serverless.yml
@@ -21,5 +21,5 @@ functions:
     iamRoleStatements:
       - Effect: Allow
         Action:
-          lambda:InvokeFunction
+          - lambda:InvokeFunction
         Resource: arn:aws:lambda:eu-west-1:006483271430:function:aws-s3cp-bulk-production-copy
