--- a/serverless.yml
+++ b/serverless.yml
@@ -7,6 +7,12 @@ provider:
   region: ${opt:region, 'eu-west-1'}
   memorySize: 128
   timeout: 30
+  iamRoleStatements:
+    - Effect: Allow
+      Action:
+        - lambda:InvokeFunction
+      Resource: "arn:aws:lambda:eu-west-1:006483271430:function:aws-s3cp-bulk-production-copy"
+
 
 package:
   exclude:
@@ -18,8 +24,3 @@ functions:
     handler: handler.cp
   bulk_copy:
     handler: handler.bulk_cp
-    iamRoleStatements:
-      - Effect: Allow
-        Action:
-          - lambda:InvokeFunction
-        Resource: arn:aws:lambda:eu-west-1:006483271430:function:aws-s3cp-bulk-production-copy
