setting up the dependancies cache on deploy

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,9 +25,18 @@ jobs:
     working_directory: ~/repo
     steps:
       - checkout
+      - restore_cache:
+          keys:
+          - v1-dependencies-{{ checksum "package.json" }}
+          - v1-dependencies-
       - run:
           name: install serverless
           command: sudo npm install -g serverless
+      - run: yarn install
+      - save_cache:
+          paths:
+            - node_modules
+          key: v1-dependencies-{{ checksum "package.json" }}
       - run:
           name: deploy
           command: serverless deploy --stage production
