--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,7 +42,7 @@ jobs:
           command: serverless deploy --stage production
       - run:
           name: verify
-          command: SLS_DEBUG=* serverless invoke --stage production --function manager
+          command: SLS_DEBUG=* serverless invoke --stage production --function integration_test
 workflows:
   version: 2
   test-deploy:
