--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   },
   "devDependencies": {
     "chai": "^4.1.2",
-    "mocha": "^4.0.1"
+    "mocha": "^4.0.1",
+    "nyc": "^11.4.1"
   },
   "scripts": {
-    "test": "find ./tests -name '*_test.js' | xargs mocha --timeout 15000 -R spec"
+    "test": "find ./tests -name '*_test.js' | xargs nyc --reporter=lcov --reporter=text -a mocha --timeout 15000 -R spec"
   },
   "author": "Tom Harvey",
   "license": "ISC",
