--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "chai": "^4.1.2",
+    "codeclimate-test-reporter": "^0.5.0",
     "mocha": "^4.0.1",
     "nyc": "^11.4.1"
   },
