--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
       - run: yarn test
-      - run: codeclimate-test-reporter < lcov.info
+      - run: codeclimate-test-reporter < coverage/lcov.info
 
   deploy:
     docker:
