--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "async": "^2.6.0",
     "aws-sdk": "^2.175.0",
+    "fast-csv": "^2.4.1",
     "url-parse": "^1.2.0"
   },
   "devDependencies": {
