--- a/serverless.yml
+++ b/serverless.yml
@@ -1,26 +1,34 @@
 service: aws-s3cp-bulk
 frameworkVersion: "=1.25.0"
+custom:
+    operationalBucketName: ${opt:bucket-name, 'aws-s3cp-bulk'}
 
 provider:
   name: aws
+  # by default AWS variables like ${AWS:Region} use same format as Serverless
+  # variables like ${self:custom.var} this pattern only allows Serverless
+  # variables to start self or opt, otherwise treat them as AWS variables.
+  # https://forum.serverless.com/t/getting-handle-accountid-in-serverless-config/946/7
+  variableSyntax: '\${((self|opt):((?!\${).)+?)}'
   runtime: nodejs6.10
   region: ${opt:region, 'eu-west-1'}
   memorySize: 128
   timeout: 30
+  environment:
+    OPERATIONAL_BUCKET_NAME: ${self:custom.operationalBucketName}-${AWS::Region}-${AWS::AccountId}
   iamRoleStatements:
     - Effect: Allow
       Action:
         - lambda:InvokeFunction
-      Resource: "arn:aws:lambda:eu-west-1:006483271430:function:aws-s3cp-bulk-production-copy"
-    - Effect: Allow
-      Action:
-        - s3:*
-      Resource: "arn:aws:s3:::aws-s3cp-bulk-006483271430-testfixturesbucket/*"
-
+      Resource:
+        Fn::Sub: arn:aws:lambda:${AWS::Region}:${AWS::AccountId}:function:aws-s3cp-bulk-production-copy
 
 package:
   exclude:
     - tests/**
+    - coverage/**
+    - .nyc_output/**
+    - .serverless/**
     - .circleci/**
 
 functions:
@@ -29,4 +37,12 @@ functions:
   integration_test:
     handler: handler.integration_test
     environment:
-      CONCURRENCY: ${opt:concurrency, 500}
+      CONCURRENCY: ${opt:concurrency, '500'}
+
+resources:
+  Resources:
+    Bucket:
+      Type: AWS::S3::Bucket
+      Properties:
+        BucketName:
+          Fn::Sub: ${self:custom.operationalBucketName}-${AWS::Region}-${AWS::AccountId}
