--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,8 @@ jobs:
     docker:
       - image: circleci/node:6.10
     working_directory: ~/repo
+    environment:
+      - REGION: 'eu-west-1'
     steps:
       - checkout
       - restore_cache:
