--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,8 +6,6 @@ jobs:
     docker:
       - image: circleci/node:6.10
     working_directory: ~/repo
-    environment:
-      - REGION: 'eu-west-1'
     steps:
       - checkout
       - restore_cache:
@@ -27,6 +25,8 @@ jobs:
     docker:
       - image: circleci/node:6.10
     working_directory: ~/repo
+    environment:
+      - REGION: 'eu-west-1'
     steps:
       - checkout
       - restore_cache:
@@ -43,7 +43,7 @@ jobs:
           key: v1-dependencies-{{ checksum "package.json" }}
       - run:
           name: deploy
-          command: serverless deploy --stage production
+          command: serverless deploy --stage production --region $REGION
       - run:
           name: verify
           command: SLS_DEBUG=* serverless invoke --stage production --function integration_test
