--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,8 @@ jobs:
       - image: circleci/node:6.10
     working_directory: ~/repo
     environment:
-      - REGION: 'eu-west-1'
+      - AWS_REGION: eu-west-1
+      - STAGE: production
     steps:
       - checkout
       - restore_cache:
@@ -43,10 +44,10 @@ jobs:
           key: v1-dependencies-{{ checksum "package.json" }}
       - run:
           name: deploy
-          command: serverless deploy --stage production --region $REGION
+          command: serverless deploy --stage $STAGE --region $AWS_REGION
       - run:
           name: verify
-          command: SLS_DEBUG=* serverless invoke --stage production --function integration_test
+          command: SLS_DEBUG=* serverless invoke --stage $STAGE --function integration_test
 workflows:
   version: 2
   test-deploy:
