--- a/serverless.yml
+++ b/serverless.yml
@@ -11,6 +11,7 @@ provider:
   # https://forum.serverless.com/t/getting-handle-accountid-in-serverless-config/946/7
   variableSyntax: '\${((self|opt):((?!\${).)+?)}'
   runtime: nodejs6.10
+  region: ${opt:region, 'eu-west-1'}
   memorySize: 128
   timeout: 30
   iamRoleStatements:
