--- a/serverless.yml
+++ b/serverless.yml
@@ -39,7 +39,6 @@ provider:
 
 package:
   exclude:
-    - tests/**
     - coverage/**
     - .nyc_output/**
     - .serverless/**
@@ -51,9 +50,10 @@ functions:
   bulk-copy:
     handler: handler.bulk_cp
   integration_test:
-    handler: handler.integration_test
+    handler: tests.integration_test
     environment:
       CONCURRENCY: ${opt:concurrency, '500'}
+      OPERATIONAL_BUCKET: ${self:custom.operationalBucketPrefix}-${AWS::Region}-${AWS::AccountId}-${self:provider.stage}
 
 resources:
   Resources:
