split unit tests from integration tests

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "nyc": "^11.4.1"
   },
   "scripts": {
-    "test": "find ./tests -name '*_test.js' | xargs nyc --reporter=lcov --reporter=text -a mocha --timeout 15000 -R spec"
+    "test": "find ./tests -name '*_unittest.js' | xargs nyc --reporter=lcov --reporter=text -a mocha --timeout 15000 -R spec"
   },
   "author": "Tom Harvey",
   "license": "ISC",
