--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,9 +46,9 @@ jobs:
       - run:
           name: deploy_staging
           command: serverless deploy --stage development --region $AWS_REGION
-      - run:
-          name: verify_staging
-          command: SLS_DEBUG=* serverless invoke --stage development --function integration_test
+      # - run:
+      #     name: verify_staging
+      #     command: SLS_DEBUG=* serverless invoke --stage development --function integration_test
       - run:
           name: deploy
           command: serverless deploy --stage production --region $AWS_REGION
