force deploy of staging

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,7 +45,7 @@ jobs:
           key: v1-dependencies-{{ checksum "package.json" }}
       - run:
           name: deploy_staging
-          command: serverless deploy --stage development --region $AWS_REGION
+          command: serverless deploy --force --stage development --region $AWS_REGION
       # - run:
       #     name: verify_staging
       #     command: SLS_DEBUG=* serverless invoke --stage development --function integration_test
