run code coverage on fulltest

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "scripts": {
     "test": "find ./tests -name '*_unittest.js' | xargs nyc --reporter=lcov --reporter=text -a mocha --timeout 15000 -R spec",
-    "fulltest": "find ./tests -name '*test.js' | xargs mocha --timeout 15000 -R spec"
+    "fulltest": "find ./tests -name '*test.js' | xargs nyc --reporter=lcov --reporter=text -a mocha --timeout 15000 -R spec"
   },
   "nyc": {
     "exclude": [
